@@ -1,7 +1,11 @@
+2009-02-16 09:17  rsbivand
+
+	* INDEX, R/sp_gdal.R: drop=FALSE in readGDAL
+
 2009-02-15 16:12  rsbivand
 
-	* R/ogr.R, R/ogr_sp.R, man/readOGR.Rd, src/ogr_geom.cpp: feature
-	  type in ogrInfo
+	* R/ogr.R, R/ogr_sp.R, man/readOGR.Rd, src/ogr_geom.cpp, ChangeLog,
+	  inst/ChangeLog: feature type in ogrInfo
 
 2009-01-31 20:47  rsbivand
 
